crates/crochet_parser/src/snapshots/crochet_parser__tests__destructuring-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let {a, b, ...rest} = letters;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..30,
                pattern: Pattern {
                    span: 4..19,
                    kind: Object(
                        ObjectPat {
                            props: [
                                Shorthand(
                                    ShorthandPatProp {
                                        ident: BindingIdent {
                                            name: "a",
                                            mutable: false,
                                            span: 5..6,
                                        },
                                        init: None,
                                        span: 5..6,
                                    },
                                ),
                                Shorthand(
                                    ShorthandPatProp {
                                        ident: BindingIdent {
                                            name: "b",
                                            mutable: false,
                                            span: 8..9,
                                        },
                                        init: None,
                                        span: 8..9,
                                    },
                                ),
                                Rest(
                                    RestPat {
                                        span: 4..19,
                                        arg: Pattern {
                                            span: 14..18,
                                            kind: Ident(
                                                BindingIdent {
                                                    name: "rest",
                                                    mutable: false,
                                                    span: 14..18,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                ),
                            ],
                            optional: false,
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 22..29,
                        kind: Ident(
                            Ident {
                                span: 22..29,
                                name: "letters",
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
